Navbar fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,13 +144,13 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 900;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-inline: 5vw;
   height: 6.5rem;
-  background-color: #fff;
+  background-color: white;
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.3);
 }
 
@@ -174,7 +174,6 @@ header .logo:hover {
 
 header .navbar {
   height: 100%;
-  /* right: -120%; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -182,7 +181,6 @@ header .navbar {
 
 header .navbar ul {
   height: 100%;
-  margin-right: 1vw;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -205,7 +203,7 @@ header .navbar ul li a {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0 1em;
   font-size: 1.7rem;
   color: #0e2431;
   font-weight: 600;
@@ -233,34 +231,35 @@ header .navbar ul li a.active {
 
   header .navbar {
     position: fixed;
+    display: flex;
     top: 6.5rem;
-    right: -120%;
-    padding-inline: 2vw;
-    width: fit-content;
+    right: -100%;
+    padding: 2vw;
     height: fit-content;
-    text-align: left;
+    align-items: center;
     background-color: black;
   }
 
   header .navbar ul {
     flex-flow: column;
-    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: fit-content;
+    gap: 2vh;
     list-style: none;
   }
 
   header .navbar ul li {
     text-align: center;
-    margin: 0.5rem 0;
     border-radius: 0.5rem;
+    height: 5vh;
+    
   }
 
   header .navbar ul li a {
-    padding: 1rem;
-    text-align: left;
-    color: #fff;
+    padding: 1vw;
+    color: white;
     font-size: 2rem;
   }
 
@@ -619,7 +618,7 @@ header .navbar ul li a.active {
     flex-direction: column;
     height: fit-content;
   }
-  
+
   .education .container .box img{
     max-width: 100%;
   }
@@ -906,7 +905,7 @@ header .navbar ul li a.active {
   .experience .timeline {
     width: 100%;
   }
-  
+
   .experience .timeline .container {
     display: flex;
     width: fit-content;
